Bug 242272 - Ark crashes on netbook while trying to extract file from archive
Summary: Ark crashes on netbook while trying to extract file from archive
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 244233 249946 252308 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-20 17:23 UTC by Ralph Janke
Modified: 2011-07-25 01:20 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (9.88 KB, text/plain)
2011-07-25 01:20 UTC, Robert A. PERRY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Janke 2010-06-20 17:23:25 UTC
Application: ark (2.14)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-23-generic i686
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
After selecting one file and clicking on the extract button, the widget for selecting the target directory pops up. However, the widget is too small on plasma-netbook to show the folder structure. While clicking on the scrollbar to try to find the right place anyway, ark crashed

 -- Backtrace:
Application: Ark (ark), signal: Segmentation fault
[Current thread is 1 (Thread 0xb786f710 (LWP 19980))]

Thread 2 (Thread 0xb60b2b70 (LWP 27505)):
#0  0x02a72ba1 in pthread_mutex_lock () from /lib/tls/i686/cmov/libc.so.6
#1  0x01b11b03 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#2  0x01b11ee9 in ?? () from /lib/libglib-2.0.so.0
#3  0x01b124b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0078160f in QEventDispatcherGlib::processEvents (this=0x880ecd8, flags=...) at kernel/qeventdispatcher_glib.cpp:414
#5  0x00754059 in QEventLoop::processEvents (this=0xb60b2290, flags=) at kernel/qeventloop.cpp:149
#6  0x007544aa in QEventLoop::exec (this=0xb60b2290, flags=...) at kernel/qeventloop.cpp:201
#7  0x006505a8 in QThread::exec (this=0x87dbda8) at thread/qthread.cpp:487
#8  0x00733c1b in QInotifyFileSystemWatcherEngine::run (this=0x87dbda8) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x0065332e in QThreadPrivate::start (arg=0x87dbda8) at thread/qthread_unix.cpp:248
#10 0x00a9196e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#11 0x02a65a4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb786f710 (LWP 19980)):
[KCrash Handler]
#6  0x00494ace in KFileItemDelegate::Private::transition (this=0x88e7fe0, from=..., to=..., amount=0.86274509803921573) at ../../kio/kio/kfileitemdelegate.cpp:582
#7  0x0049a47b in KFileItemDelegate::paint (this=0x88e7f78, painter=0xbfbed24c, option=..., index=...) at ../../kio/kio/kfileitemdelegate.cpp:1288
#8  0x01701088 in QTreeView::drawRow (this=0x88e3620, painter=0xbfbed24c, option=..., index=...) at itemviews/qtreeview.cpp:1670
#9  0x0170b4a9 in QTreeView::drawTree (this=0x88e3620, painter=0xbfbed24c, region=...) at itemviews/qtreeview.cpp:1433
#10 0x0170e5bd in QTreeView::paintEvent (this=0x88e3620, event=0xbfbedb04) at itemviews/qtreeview.cpp:1266
#11 0x0117b6b6 in QWidget::event (this=0x88e3620, event=0xbfbedb04) at kernel/qwidget.cpp:8144
#12 0x01577fd3 in QFrame::event (this=0x88e3620, e=0xbfbedb04) at widgets/qframe.cpp:557
#13 0x01612382 in QAbstractScrollArea::viewportEvent (this=0x89caf90, e=0x0) at widgets/qabstractscrollarea.cpp:1036
#14 0x016c6bd7 in QAbstractItemView::viewportEvent (this=0x88e3620, event=0xbfbedb04) at itemviews/qabstractitemview.cpp:1610
#15 0x01707f7c in QTreeView::viewportEvent (this=0x88e3620, event=0xbfbedb04) at itemviews/qtreeview.cpp:1248
#16 0x01614c65 in QAbstractScrollAreaPrivate::viewportEvent (this=0x88e5250, o=0x88db028, e=0xbfbedb04) at widgets/qabstractscrollarea_p.h:100
#17 QAbstractScrollAreaFilter::eventFilter (this=0x88e5250, o=0x88db028, e=0xbfbedb04) at widgets/qabstractscrollarea_p.h:116
#18 0x00754cda in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x85688e8, receiver=0x88db028, event=0xbfbedb04) at kernel/qcoreapplication.cpp:819
#19 0x0111d4b9 in QApplicationPrivate::notify_helper (this=0x85688e8, receiver=0x88db028, e=0xbfbedb04) at kernel/qapplication.cpp:4296
#20 0x011240f9 in QApplication::notify (this=0xbfbf06bc, receiver=0x88db028, e=0xbfbedb04) at kernel/qapplication.cpp:4265
#21 0x00e10f2a in KApplication::notify (this=0xbfbf06bc, receiver=0x88db028, event=0xbfbedb04) at ../../kdeui/kernel/kapplication.cpp:302
#22 0x00755a3b in QCoreApplication::notifyInternal (this=0xbfbf06bc, receiver=0x88db028, event=0xbfbedb04) at kernel/qcoreapplication.cpp:704
#23 0x011849d6 in QCoreApplication::sendSpontaneousEvent (this=0x88e4348, pdev=0x88c0fd4, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x8851848)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#24 QWidgetPrivate::drawWidget (this=0x88e4348, pdev=0x88c0fd4, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x8851848) at kernel/qwidget.cpp:5339
#25 0x0135b7d7 in QWidgetBackingStore::sync (this=0x8851848) at painting/qbackingstore.cpp:1283
#26 0x01174b93 in QWidgetPrivate::syncBackingStore (this=0x88bc340) at kernel/qwidget.cpp:1672
#27 0x0117be76 in QWidget::event (this=0x88b63b8, event=0xbfbee3b4) at kernel/qwidget.cpp:8291
#28 0x0111d4dc in QApplicationPrivate::notify_helper (this=0x85688e8, receiver=0x88b63b8, e=0xbfbee3b4) at kernel/qapplication.cpp:4300
#29 0x011240f9 in QApplication::notify (this=0xbfbf06bc, receiver=0x88b63b8, e=0xbfbee3b4) at kernel/qapplication.cpp:4265
#30 0x00e10f2a in KApplication::notify (this=0xbfbf06bc, receiver=0x88b63b8, event=0xbfbee3b4) at ../../kdeui/kernel/kapplication.cpp:302
#31 0x00755a3b in QCoreApplication::notifyInternal (this=0xbfbf06bc, receiver=0x88b63b8, event=0xbfbee3b4) at kernel/qcoreapplication.cpp:704
#32 0x01358877 in QCoreApplication::sendEvent (widget=0x88b63b8, updateImmediately=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#33 sendUpdateRequest (widget=0x88b63b8, updateImmediately=<value optimized out>) at painting/qbackingstore.cpp:503
#34 0x0135c204 in QWidgetBackingStore::markDirty (this=0x8851848, rect=..., widget=0x88cf6a8, updateImmediately=true, invalidateBuffer=false) at painting/qbackingstore.cpp:667
#35 0x01177689 in QWidget::repaint (this=0x88cf6a8, rect=...) at kernel/qwidget.cpp:10034
#36 0x015d56cf in QScrollBar::mousePressEvent (this=0x88cf6a8, e=0xbfbeec40) at widgets/qscrollbar.cpp:599
#37 0x0117b7dc in QWidget::event (this=0x88cf6a8, event=0xbfbeec40) at kernel/qwidget.cpp:7994
#38 0x0152af54 in QAbstractSlider::event (this=0x88cf6a8, e=0xbfbeec40) at widgets/qabstractslider.cpp:956
#39 0x015d5aea in QScrollBar::event (this=0x88cf6a8, event=0xbfbeec40) at widgets/qscrollbar.cpp:527
#40 0x0111d4dc in QApplicationPrivate::notify_helper (this=0x85688e8, receiver=0x88cf6a8, e=0xbfbeec40) at kernel/qapplication.cpp:4300
#41 0x011249f7 in QApplication::notify (this=0xbfbf06bc, receiver=0x88cf6a8, e=0xbfbeec40) at kernel/qapplication.cpp:3865
#42 0x00e10f2a in KApplication::notify (this=0xbfbf06bc, receiver=0x88cf6a8, event=0xbfbeec40) at ../../kdeui/kernel/kapplication.cpp:302
#43 0x00755a3b in QCoreApplication::notifyInternal (this=0xbfbf06bc, receiver=0x88cf6a8, event=0xbfbeec40) at kernel/qcoreapplication.cpp:704
#44 0x01123952 in QCoreApplication::sendEvent (receiver=0x88cf6a8, event=0xbfbeec40, alienWidget=0x88cf6a8, nativeWidget=0x88b63b8, buttonDown=0x1a61058, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#45 QApplicationPrivate::sendMouseEvent (receiver=0x88cf6a8, event=0xbfbeec40, alienWidget=0x88cf6a8, nativeWidget=0x88b63b8, buttonDown=0x1a61058, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2965
#46 0x011af088 in QETWidget::translateMouseEvent (this=0x88b63b8, event=0xbfbef15c) at kernel/qapplication_x11.cpp:4368
#47 0x011ae511 in QApplication::x11ProcessEvent (this=0xbfbf06bc, event=0xbfbef15c) at kernel/qapplication_x11.cpp:3379
#48 0x011dd60a in x11EventSourceDispatch (s=0x856ba40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#49 0x01b0e5e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#50 0x01b122d8 in ?? () from /lib/libglib-2.0.so.0
#51 0x01b124b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#52 0x007815d5 in QEventDispatcherGlib::processEvents (this=0x8552b60, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#53 0x011dd135 in QGuiEventDispatcherGlib::processEvents (this=0x8552b60, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#54 0x00754059 in QEventLoop::processEvents (this=0xbfbef450, flags=) at kernel/qeventloop.cpp:149
#55 0x007544aa in QEventLoop::exec (this=0xbfbef450, flags=...) at kernel/qeventloop.cpp:201
#56 0x0165c4f3 in QDialog::exec (this=0x88b63b8) at dialogs/qdialog.cpp:546
#57 0x067bb7c8 in ?? () from /usr/lib/kde4/arkpart.so
#58 0x067b2a02 in ?? () from /usr/lib/kde4/arkpart.so
#59 0x0075ac9a in QMetaObject::metacall (object=0x8742d00, cl=144486288, idx=141831424, argv=0xbfbef538) at kernel/qmetaobject.cpp:237
#60 0x007693d5 in QMetaObject::activate (sender=0x87c5f60, m=0x1a45d58, local_signal_index=1, argv=0xbfbef698) at kernel/qobject.cpp:3293
#61 0x01116bd9 in QAction::triggered (this=0x87c5f60, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#62 0x01118dcc in QAction::activate (this=0x87c5f60, event=QAction::Trigger) at kernel/qaction.cpp:1255
#63 0x0160bbd2 in QAction::trigger (this=0x0) at ../../include/QtGui/../../src/gui/kernel/qaction.h:218
#64 QToolButton::nextCheckState (this=0x0) at widgets/qtoolbutton.cpp:1147
#65 0x01528cb3 in QAbstractButtonPrivate::click (this=0x87dc038) at widgets/qabstractbutton.cpp:528
#66 0x01528fae in QAbstractButton::mouseReleaseEvent (this=0x87dbf68, e=0xbfbefe00) at widgets/qabstractbutton.cpp:1121
#67 0x0160c09c in QToolButton::mouseReleaseEvent (this=0x87dbf68, e=0xbfbefe00) at widgets/qtoolbutton.cpp:721
#68 0x0117b7f8 in QWidget::event (this=0x87dbf68, event=0xbfbefe00) at kernel/qwidget.cpp:7998
#69 0x01527d4e in QAbstractButton::event (this=0x87dbf68, e=0x0) at widgets/qabstractbutton.cpp:1080
#70 0x0160ebca in QToolButton::event (this=0x87dbf68, event=0xbfbefe00) at widgets/qtoolbutton.cpp:1163
#71 0x0111d4dc in QApplicationPrivate::notify_helper (this=0x85688e8, receiver=0x87dbf68, e=0xbfbefe00) at kernel/qapplication.cpp:4300
#72 0x011249f7 in QApplication::notify (this=0xbfbf06bc, receiver=0x87dbf68, e=0xbfbefe00) at kernel/qapplication.cpp:3865
#73 0x00e10f2a in KApplication::notify (this=0xbfbf06bc, receiver=0x87dbf68, event=0xbfbefe00) at ../../kdeui/kernel/kapplication.cpp:302
#74 0x00755a3b in QCoreApplication::notifyInternal (this=0xbfbf06bc, receiver=0x87dbf68, event=0xbfbefe00) at kernel/qcoreapplication.cpp:704
#75 0x01123952 in QCoreApplication::sendEvent (receiver=0x87dbf68, event=0xbfbefe00, alienWidget=0x87dbf68, nativeWidget=0x863a0a8, buttonDown=0x1a61058, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#76 QApplicationPrivate::sendMouseEvent (receiver=0x87dbf68, event=0xbfbefe00, alienWidget=0x87dbf68, nativeWidget=0x863a0a8, buttonDown=0x1a61058, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2965
#77 0x011af088 in QETWidget::translateMouseEvent (this=0x863a0a8, event=0xbfbf031c) at kernel/qapplication_x11.cpp:4368
#78 0x011ae511 in QApplication::x11ProcessEvent (this=0xbfbf06bc, event=0xbfbf031c) at kernel/qapplication_x11.cpp:3379
#79 0x011dd60a in x11EventSourceDispatch (s=0x856ba40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#80 0x01b0e5e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#81 0x01b122d8 in ?? () from /lib/libglib-2.0.so.0
#82 0x01b124b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#83 0x007815d5 in QEventDispatcherGlib::processEvents (this=0x8552b60, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#84 0x011dd135 in QGuiEventDispatcherGlib::processEvents (this=0x8552b60, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#85 0x00754059 in QEventLoop::processEvents (this=0xbfbf0614, flags=) at kernel/qeventloop.cpp:149
#86 0x007544aa in QEventLoop::exec (this=0xbfbf0614, flags=...) at kernel/qeventloop.cpp:201
#87 0x0075869f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#88 0x0111d577 in QApplication::exec () at kernel/qapplication.cpp:3579
#89 0x08050499 in _start ()

Reported using DrKonqi
Comment 1 Raphael Kubo da Costa 2010-06-20 20:46:53 UTC
Is this crash reproducible every time? Does it happen on the desktop as well?
Comment 2 Raphael Kubo da Costa 2010-06-20 21:08:23 UTC
Hmm, maybe reassigning to plasma-bugs might help get things fixed a bit more quickly.
Comment 3 Ralph Janke 2010-06-21 14:24:11 UTC
I was not able to reproduce the crash. However, the inappropriate size of the widget is re-producible
Comment 4 Raphael Kubo da Costa 2010-07-11 19:19:38 UTC
*** Bug 244233 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2010-08-08 13:30:17 UTC
SVN commit 1160565 by cfeck:

Fix crash in pixmap transition

Protect against null pixmaps which do not have a paintEngine
FIXED-IN: 4.5.1
BUG: 242272


 M  +2 -2      kfileitemdelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1160565
Comment 6 Christoph Feck 2010-08-08 13:32:16 UTC
SVN commit 1160566 by cfeck:

Fix crash in pixmap transition (backport r1160565)

CCBUG: 242272


 M  +2 -2      kfileitemdelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1160566
Comment 7 Christoph Feck 2010-09-08 22:58:36 UTC
*** Bug 249946 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-06-26 13:45:48 UTC
*** Bug 252308 has been marked as a duplicate of this bug. ***
Comment 9 Robert A. PERRY 2011-07-25 01:20:41 UTC
Created attachment 62163 [details]
New crash information added by DrKonqi

It is as stated.  when selecting a file to extract and using the extract button, the directory structure is too small to read and and trying to use it causes a crash.  I am using a Duron processor, 232 megs of ram and a crt vga monitor.