Fix crash in pixmap transition

Protect against null pixmaps which do not have a paintEngine
FIXED-IN: 4.5.1
BUG: 242272

svn path=/trunk/KDE/kdelibs/; revision=1160565